--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,4 @@
 .jumbotron {
-    background-image: url('./img/b37d8f9eb353a1980dcafbc74cfba7e2.jpg');
-    background-repeat: no-repeat;
+    background-image: url('./img/b37d8f9eb353a1980dcafbc74cfba7e2.jpg') center center;
+    background-size: 100% 100%;
 }
